# angular-bazel-template

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  angular.json  package.json  renovate.json
projects/: tsconfig.json
projects/expected/: BUILD.bazel  index.html  polyfills.ts
projects/expected/app/: app.component.html  app.component.ts  app.module.ts
tools/: defaults.bzl
